--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 <td class="Large_pizza">
                     <div><img src= "images/large.png" width="120" alt=""></div>
                     <div>
-                        <h3 x-text="featuredMediumPizza.flavour"></h3>
+                        <h3 x-text="featuredLargePizza.flavour"></h3>
                     </div>
                     <div>
-                        <div x-text="featuredMediumPizza.size"></div>
+                        <div x-text="featuredLargePizza.size"></div>
                     </div>
                     <div>
-                        <h4>R<strong x-text="featuredMediumPizza.price"></strong></h4>
+                        <h4>R<strong x-text="featuredLargePizza.price"></strong></h4>
                     </div>
                     <div>
                         <button class="buyButton" x-on:click="add(featuredLargePizza)">Buy</button>
