--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
     <div x-show="payNow">
-        <button class="backButton" x-on:click="backButtonFunction">Back/Cancel</button>
+        <button class="backButton" x-on:click="backButtonFunction">Cancel</button>
     </div>
        
     
