--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="API-Pizza-Widget.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
 
     
@@ -23,7 +23,7 @@
 
 <div class="heading">
     <br><br><br><br>
-    <h1>Pizzas you can quickly order!</h1>
+    <h1>Pizzas you can quickly order!!!</h1>
     <br><br><br><br>
 </div>  
     <br>
