--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </table>
 
 
-    <div class="paidPizza" x-show="paid_pizza">
+    <!-- <div class="paidPizza" x-show="paid_pizza">
         <h2>Your order is accepted, thank you!!!</h2> 
         <table>
             <template x-for="pizza in cart.pizzas">
@@ -209,7 +209,7 @@
                 <td x-text="pizza.size"></td>
                 <td x-text="pizza.total.toFixed(2)"></td>>
             </tr>
-            </template>
+            </template> -->
             <!-- <tr>
                 Your Cart total: <strong>R<price x-text="cart.total.toFixed(2)"></price></strong>
             </tr> -->
